# MyCurrency

./: .env.example  Dockerfile  MyCurrency.postman_collection.json  README.md  docker-compose.yml  pyproject.toml
apps/exchange/: admin.py  models.py
apps/exchange/api/v1/: serializers.py  urls.py  views.py
apps/exchange/api/v2/: urls.py  views.py
apps/exchange/application/: dto.py  tasks.py
apps/exchange/domain/: interfaces.py  models.py  services.py
apps/exchange/infrastructure/persistence/: models.py  repositories.py
apps/exchange/infrastructure/providers/: currency_beacon.py  exchange_rate.py  mock.py  registry.py
apps/exchange/management/commands/: load_historical.py
apps/exchange/migrations/: 0001_initial.py  0002_auto_20260215_0957.py
apps/exchange/templates/admin/exchange/: converter.html
core/: celery.py  settings.py  urls.py
tests/apps/exchange/api/v1/: test_provider_validation.py  test_serializers.py  test_views.py
tests/apps/exchange/application/: test_dto.py  test_tasks.py
tests/apps/exchange/domain/: test_services.py
tests/apps/exchange/infrastructure/persistence/: test_repositories.py
tests/apps/exchange/infrastructure/providers/: test_currency_beacon.py  test_mock.py  test_registry.py
